fix: Update ENV.EXAMPLE

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-# Copy to .env and set your MongoDB URI
-MONGODB_URI=mongodb://localhost:27017/telecomx
-PORT=3000
+PORT=8081
+MONGO_USER=mongo
+MONGO_PASSWORD=hpVLBEvqrjWGPykpxYgaYfJTficuDxHC
+
+MONGODB_URI=mongodb://mongo:hpVLBEvqrjWGPykpxYgaYfJTficuDxHC@yamanote.proxy.rlwy.net:52265
+MONGO_PORT=27017
+BROKER=kafka.railway.internal:29092
+EVENTS_TOPIC=Customer
