--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ MONGO_PASSWORD=hpVLBEvqrjWGPykpxYgaYfJTficuDxHC
 MONGODB_URI=mongodb://mongo:hpVLBEvqrjWGPykpxYgaYfJTficuDxHC@yamanote.proxy.rlwy.net:52265
 MONGO_PORT=27017
 BROKER=kafka.railway.internal:29092
+KAFKA_CLIENT_ID=UserService
 EVENTS_TOPIC=Customer
